--- a/index.html
+++ b/index.html
@@ -12,16 +12,34 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-
+    <header class="container">
+        <div class="row justify-content-between align-items-center">
+            <div class="col text-white">START BOOTSTRAP</div>
+            <div class="col">
+                <i class="fa-regular fa-rectangle-list offset-10 d-md-none text-white"></i>
+                <ul class="d-none d-md-flex justify-content-around nav-bar">
+                    <li><a class="text-white" href="">Portfolio</a></li>
+                    <li><a class="text-white" href="">About</a></li>
+                    <li><a class="text-white" href="">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <main>
+        <div class="container bg-success start-bootstrap">
+            <div class="col-6 offset-3 ">
+                <img src="img/logo.svg" alt="">
+            </div>
+        </div>
+        <div class="container rounded">
+            <img src="img/logo.svg" alt="">
+        </div>
 
     </main>
     
-    <footer>
-        
+    <footer class="container">
+
     </footer>
 </body>
 </html>
