--- a/index.html
+++ b/index.html
@@ -27,15 +27,48 @@
     </header>
 
     <main>
-        <div class="container bg-success start-bootstrap">
-            <div class="col-6 offset-3 ">
-                <img src="img/logo.svg" alt="">
+        <div class="container start-bootstrap backg-green">
+            <div class="row align-items-center justify-content-around text-center mb-3">
+                <div class="col-8">
+                    <img class="mb-3" src="img/avatar.svg" alt="">
+                    <h4 class="text-white mb-2">START BOOTSTRAP</h4>
+                    <div class="text-white icons mb-2">
+                        <i class="fa-solid fa-horizontal-rule"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-horizontal-rule"></i>
+                    </div>
+                    <div class="mb-3 text-white jumbotron-text">GRAPHIC-WEB DESIGNER-ILLUSTRATOR</div>
+                </div>
             </div>
         </div>
-        <div class="container rounded">
-            <img src="img/logo.svg" alt="">
+        <div class="container row align-items-center justify-content-around text-center m-0 mb-5"></div>
+            <div class="col-4 offset-4 text-center">
+                <h4 class="color-bl mb-2">PORTFOLIO</h4>
+                <div class="color-bl icons mb-2">
+                    <i class="fa-solid fa-horizontal-rule"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-horizontal-rule"></i>
+                </div> 
+            </div>
+            <div class="m-3">
+                <img class="w-100 rounded" src="img/cabin.png" alt="">
+            </div>
+            <div class="m-3">
+                <img class="w-100 rounded" src="img/cake.png" alt="">
+            </div>
+            <div class="m-3">
+                <img class="w-100 rounded" src="img/circus.png" alt="">
+            </div>
+            <div class="m-3">
+                <img class="w-100 rounded" src="img/game.png" alt="">
+            </div>
+            <div class="m-3">
+                <img class="w-100 rounded" src="img/safe.png" alt="">
+            </div>
+            <div class="m-3">
+                <img class="w-100 rounded" src="img/submarine.png" alt="">
+            </div>
         </div>
-
     </main>
     
     <footer class="container">
