--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             <div class="col-4 offset-4 text-center">
                 <h4 class="color-bl mb-2">PORTFOLIO</h4>
                 <div class="color-bl icons mb-2">
-                    <i class="fa-solid fa-horizontal-rule"></i>
+                     <i class="fa-solid fa-horizontal-rule"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-horizontal-rule"></i>
-                </div> 
+                </div>
             </div>
             <div class="m-3">
                 <img class="w-100 rounded" src="img/cabin.png" alt="">
@@ -67,6 +67,26 @@
             </div>
             <div class="m-3">
                 <img class="w-100 rounded" src="img/submarine.png" alt="">
+            </div>
+        </div>
+        <div class="container start-bootstrap backg-green pb-4">
+            <div class="container row align-items-center justify-content-around text-center m-0 mb-5"></div>
+            <div class="col-6 offset-3">
+                <h4 class="text-white mb-2 text-center">ABOUT</h4>
+                <div class="text-white icons mb-2 text-center">
+                    <i class="fa-solid fa-horizontal-rule"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-horizontal-rule"></i>
+                </div>
+                <div class="text-left text-white mb-3">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit? 
+                </div>
+                <div class="text-left text-white mb-3">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit? 
+                </div>
+                <div class="text-center">
+                    <a class="text-white border border-white rounded p-2" href=""><i class="fa-solid fa-download"></i> Download</a>
+                </div>
             </div>
         </div>
     </main>
