--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid m-0">
         <div class="row justify-content-between align-items-center">
             <div class="col text-white">START BOOTSTRAP</div>
             <div class="col">
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-        <div class="container start-bootstrap backg-green">
+        <div class="container-fluid start-bootstrap backg-green m-0">
             <div class="row align-items-center justify-content-around text-center mb-3">
                 <div class="col-8">
                     <img class="mb-3" src="img/avatar.svg" alt="">
@@ -41,36 +41,37 @@
                 </div>
             </div>
         </div>
-        <div class="container row align-items-center justify-content-around text-center m-0 mb-5"></div>
-            <div class="col-4 offset-4 text-center">
-                <h4 class="color-bl mb-2">PORTFOLIO</h4>
-                <div class="color-bl icons mb-2">
-                     <i class="fa-solid fa-horizontal-rule"></i>
-                    <i class="fa-solid fa-star"></i>
-                    <i class="fa-solid fa-horizontal-rule"></i>
+        <div class="container-fluid mb-5"></div>
+            <div class="row align-items-center justify-content-around text-center ">
+                <div class="col-4 text-center">
+                    <h4 class="color-bl mb-2">PORTFOLIO</h4>
+                    <div class="color-bl icons mb-2">
+                        <i class="fa-solid fa-horizontal-rule"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-horizontal-rule"></i>
+                    </div>
+                </div>
+                <div class="m-3">
+                    <img class="w-100 rounded" src="img/cabin.png" alt="">
+                </div>
+                <div class="m-3">
+                    <img class="w-100 rounded" src="img/cake.png" alt="">
+                </div>
+                <div class="m-3">
+                    <img class="w-100 rounded" src="img/circus.png" alt="">
+                </div>
+                <div class="m-3">
+                    <img class="w-100 rounded" src="img/game.png" alt="">
+                </div>
+                <div class="m-3">
+                    <img class="w-100 rounded" src="img/safe.png" alt="">
+                </div>
+                <div class="m-3">
+                    <img class="w-100 rounded" src="img/submarine.png" alt="">
                 </div>
             </div>
-            <div class="m-3">
-                <img class="w-100 rounded" src="img/cabin.png" alt="">
-            </div>
-            <div class="m-3">
-                <img class="w-100 rounded" src="img/cake.png" alt="">
-            </div>
-            <div class="m-3">
-                <img class="w-100 rounded" src="img/circus.png" alt="">
-            </div>
-            <div class="m-3">
-                <img class="w-100 rounded" src="img/game.png" alt="">
-            </div>
-            <div class="m-3">
-                <img class="w-100 rounded" src="img/safe.png" alt="">
-            </div>
-            <div class="m-3">
-                <img class="w-100 rounded" src="img/submarine.png" alt="">
-            </div>
-        </div>
-        <div class="container start-bootstrap backg-green pb-4">
-            <div class="container row align-items-center justify-content-around text-center m-0 mb-5"></div>
+        <div class="container-fluid start-bootstrap backg-green pb-4">
+            <div class="row align-items-center justify-content-around text-center m-0 mb-5"></div>
             <div class="col-6 offset-3">
                 <h4 class="text-white mb-2 text-center">ABOUT</h4>
                 <div class="text-white icons mb-2 text-center">
@@ -91,7 +92,7 @@
         </div>
     </main>
     
-    <footer class="container">
+    <footer class="container-fluid">
 
     </footer>
 </body>
