--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </header>
 
     <main>
-        <div class="container-fluid start-bootstrap backg-green m-0">
+        <div id="start-bot" class="container-fluid start-bootstrap backg-green m-0">
             <div class="row align-items-center justify-content-around text-center mb-3">
                 <div class="col-8">
-                    <img class="mb-3" src="img/avatar.svg" alt="">
-                    <h4 class="text-white mb-2">START BOOTSTRAP</h4>
+                    <img class="mb-3 avatar" src="img/avatar.svg" alt="">
+                    <h4 class="text-white mb-2 h3-md">START BOOTSTRAP</h4>
                     <div class="text-white icons mb-2">
                         <i class="fa-solid fa-horizontal-rule"></i>
                         <i class="fa-solid fa-star"></i>
@@ -52,40 +52,28 @@
                     </div>
                 </div>
                 <div class="m-3">
-                    <img class="w-100 rounded" src="img/cabin.png" alt="">
-                </div>
-                <div class="m-3">
-                    <img class="w-100 rounded" src="img/cake.png" alt="">
-                </div>
-                <div class="m-3">
-                    <img class="w-100 rounded" src="img/circus.png" alt="">
-                </div>
-                <div class="m-3">
-                    <img class="w-100 rounded" src="img/game.png" alt="">
-                </div>
-                <div class="m-3">
-                    <img class="w-100 rounded" src="img/safe.png" alt="">
-                </div>
-                <div class="m-3">
-                    <img class="w-100 rounded" src="img/submarine.png" alt="">
+                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/cabin.png" alt="">
+                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/cake.png" alt="">
+                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/circus.png" alt="">
+                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/game.png" alt="">
+                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/safe.png" alt="">
+                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/submarine.png" alt="">
                 </div>
             </div>
         <div class="container-fluid start-bootstrap backg-green pb-4">
             <div class="row align-items-center justify-content-around text-center m-0 mb-5"></div>
-            <div class="col-6 offset-3">
+            <div class="col-8 offset-2">
                 <h4 class="text-white mb-2 text-center">ABOUT</h4>
                 <div class="text-white icons mb-2 text-center">
                     <i class="fa-solid fa-horizontal-rule"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-horizontal-rule"></i>
                 </div>
-                <div class="text-left text-white mb-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit? 
-                </div>
-                <div class="text-left text-white mb-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit? 
-                </div>
-                <div class="text-center">
+                    <div class="container-fluid text-white mb-3 p-0">
+                        <div class="text-left ms-4 mb-3 col-12 col-md-5 d-md-inline-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit?</div>
+                        <div class="text-left ms-4 mb-3 col 12 col-md-5 d-md-inline-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit?</div>
+                    </div>
+                <div class="text-center mt-3">
                     <a class="text-white border border-white rounded p-2" href=""><i class="fa-solid fa-download"></i> Download</a>
                 </div>
             </div>
