--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="mb-4">
         <div id="start-bot" class="container-fluid start-bootstrap backg-green m-0">
             <div class="row align-items-center justify-content-around text-center mb-3">
                 <div class="col-8">
@@ -70,8 +70,8 @@
                     <i class="fa-solid fa-horizontal-rule"></i>
                 </div>
                     <div class="container-fluid text-white mb-3 p-0">
-                        <div class="text-left ms-4 mb-3 col-12 col-md-5 d-md-inline-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit?</div>
-                        <div class="text-left ms-4 mb-3 col 12 col-md-5 d-md-inline-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit?</div>
+                        <div class="text-left ps-4 mb-3 col-12 col-md-5 d-md-inline-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit?</div>
+                        <div class="text-left ps-4 mb-3 col 12 col-md-5 d-md-inline-flex">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est vitae, quo maxime enim distinctio cum sequi at unde rem voluptatum facere totam nihil nesciunt fugit?</div>
                     </div>
                 <div class="text-center mt-3">
                     <a class="text-white border border-white rounded p-2" href=""><i class="fa-solid fa-download"></i> Download</a>
@@ -81,7 +81,45 @@
     </main>
     
     <footer class="container-fluid">
-
+        <div>
+            <h4 class="color-bl mb-2 text-center">CONTACT ME</h4>
+            <div class="color-bl icons mb-2 text-center">
+                <i class="fa-solid fa-horizontal-rule"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-horizontal-rule"></i>
+            </div>
+            <ul class="container-fluid">
+                <div class="col-6 offset-3">
+                    <li>Name</li>
+                    <hr>
+                </div>
+                <div class="col-6 offset-3">
+                    <li>Email Address</li>
+                    <hr>
+                </div>
+                <div class="col-6 offset-3">
+                    <li>Phone Number</li>
+                    <hr>
+                </div>
+                <div class="col-6 offset-3 line-height">
+                    <li>Message</li>
+                    <hr>
+                </div>
+                <a class="rounded backg-green send-button col-6  offset-3 mt-1" href="">send</a>
+            </ul>
+        </div>
+        <div class=" backg-footer-gray">
+            <div class="col-10 col-md-12 ontainer-fluid text-center text-white py-1">
+                <div class="row justify-content-around align-items-baseline">
+                    <div class="mb-5 col-12 col-md-3 mt-5">LOCATION<br>2215 John Daniel Drive Clark, MO 54243</div>
+                    <div class="mb-5 col-12 col-md-3 app">AROUND THE WEB<br><i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-google-plus-g"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin-in"></i></div>
+                    <div class="mb-5 col-12 col-md-3">ABOUT FREELANCER<br>Freelance isc a free to use, open source bootstrap theme creater by Start Bootsrap</div>
+                </div>
+            </div>
+        </div>
+        <div class="backg-footer-darkgray p-4 col-12 text-center text-white">
+            Copyright Your Website 2019
+        </div>
     </footer>
 </body>
 </html>
