--- a/index.html
+++ b/index.html
@@ -43,22 +43,20 @@
         </div>
         <div class="container-fluid mb-5"></div>
             <div class="row align-items-center justify-content-around text-center ">
-                <div class="col-4 text-center">
+                <div class="col-12 text-center">
                     <h4 class="color-bl mb-2">PORTFOLIO</h4>
                     <div class="color-bl icons mb-2">
                         <i class="fa-solid fa-horizontal-rule"></i>
                         <i class="fa-solid fa-star"></i>
                         <i class="fa-solid fa-horizontal-rule"></i>
                     </div>
-                </div>
-                <div class="m-3">
-                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/cabin.png" alt="">
-                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/cake.png" alt="">
-                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/circus.png" alt="">
-                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/game.png" alt="">
-                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/safe.png" alt="">
-                    <img class="col-8 rounded col-md-4 m-3 col-xl-3" src="img/submarine.png" alt="">
-                </div>
+                </div class="row"> 
+                <div class="col-8 col-md-5 m-3 col-xl-3"><img class="w-100 rounded" src="img/cabin.png" alt=""></div>
+                <div class="col-8 col-md-5 m-3 col-xl-3"><img class="w-100 rounded" src="img/cake.png" alt=""></div>
+                <div class="col-8 col-md-5 m-3 col-xl-3"><img class="w-100 rounded" src="img/circus.png" alt=""></div>
+                <div class="col-8 col-md-5 m-3 col-xl-3"><img class="w-100 rounded" src="img/game.png" alt=""></div>
+                <div class="col-8 col-md-5 m-3 col-xl-3"><img class="w-100 rounded" src="img/safe.png" alt=""></div>
+                <div class="col-8 col-md-5 m-3 col-xl-3"><img class="w-100 rounded" src="img/submarine.png" alt=""></div>
             </div>
         <div class="container-fluid start-bootstrap backg-green pb-4">
             <div class="row align-items-center justify-content-around text-center m-0 mb-5"></div>
@@ -89,36 +87,44 @@
                 <i class="fa-solid fa-horizontal-rule"></i>
             </div>
             <ul class="container-fluid">
-                <div class="col-6 offset-3">
-                    <li>Name</li>
-                    <hr>
+                <div class="row">
+                    <div class="col-6 offset-3">
+                        <li>Name</li>
+                        <hr>
+                    </div>
                 </div>
-                <div class="col-6 offset-3">
-                    <li>Email Address</li>
-                    <hr>
+                <div class="row">
+                    <div class="col-6 offset-3">
+                        <li>Email Address</li>
+                        <hr>
+                    </div>
                 </div>
-                <div class="col-6 offset-3">
-                    <li>Phone Number</li>
-                    <hr>
+                <div class="row">
+                    <div class="col-6 offset-3">
+                        <li>Phone Number</li>
+                        <hr>
+                    </div>
                 </div>
-                <div class="col-6 offset-3 line-height">
-                    <li>Message</li>
-                    <hr>
+                <div class="row">
+                    <div class="col-6 offset-3 line-height">
+                        <li>Message</li>
+                        <hr>
+                    </div>
                 </div>
                 <a class="rounded backg-green send-button col-6  offset-3 mt-1" href="">send</a>
             </ul>
         </div>
-        <div class=" backg-footer-gray">
-            <div class="col-10 col-md-12 ontainer-fluid text-center text-white py-1">
-                <div class="row justify-content-around align-items-baseline">
+        <div class="row vw-100 backg-footer-gray">
+            <div class="col-12 ontainer-fluid text-center text-white py-1">
+                <div class="row justify-content-around align-items-baseline text-center">
                     <div class="mb-5 col-12 col-md-3 mt-5">LOCATION<br>2215 John Daniel Drive Clark, MO 54243</div>
                     <div class="mb-5 col-12 col-md-3 app">AROUND THE WEB<br><i class="fa-brands fa-facebook-f"></i><i class="fa-brands fa-google-plus-g"></i><i class="fa-brands fa-twitter"></i><i class="fa-brands fa-linkedin-in"></i></div>
                     <div class="mb-5 col-12 col-md-3">ABOUT FREELANCER<br>Freelance isc a free to use, open source bootstrap theme creater by Start Bootsrap</div>
                 </div>
             </div>
         </div>
-        <div class="backg-footer-darkgray p-4 col-12 text-center text-white">
-            Copyright Your Website 2019
+        <div class="row backg-footer-darkgray vw-100">
+            <div class="p-4 text-center text-white">Copyright Your Website 2019</div>
         </div>
     </footer>
 </body>
